# ccmath

./: CMakeLists.txt  README.md
.github/workflows/: ci-macos.yml  ci-windows.yml
include/ccmath/internal/math/runtime/func/power/: sqrt_rt.hpp
include/ccmath/internal/predef/attributes/: always_inline.hpp
include/ccmath/internal/support/fenv/: rounding_mode.hpp
test/: CMakeLists.txt
test/power/: sqrt_test.cpp
